--- a/source/index.html
+++ b/source/index.html
@@ -42,10 +42,14 @@
           <h2 class="visually-hidden">Подбор велосипедов</h2>
           <p>Заполните поля ниже и мы подберем велосипед Вашей мечты</p>
           <form class="selection__form form" action="#" method="POST">
+            <div class="form__name">
             <label class="visually-hidden" for="name">Введите ваше имя</label>
             <input id="name" type="text" placeholder="Введите Ваше Имя" required>
+            </div>
+            <div class="form__telephone">
             <label class="visually-hidden" for="telephone">Введите Ваш номер телефона</label>
-            <input id="name" type="tel" placeholder="Введите Ваш номер телефона" required>
+            <input id="telephone" type="tel" placeholder="Введите Ваш номер телефона" required>
+            </div>
             <button class="form__submit button" type="submit">Подобрать велосипед мечты</button>
           </form>
         </section>
@@ -86,7 +90,7 @@
                 srcset="img/content/types/mountain-bike-mobile.webp 1x, img/content/types/mountain-bike-mobile@2x.webp 2x">
               <img src="img/content/types/mountain-bike.jpg"
                 srcset="img/content/types/mountain-bike.jpg 1x, img/content/types/mountain-bike@2x.jpg 2x" width="342"
-                height="503" alt="Велосипед с широкими шинами на фоне горного пейзажа">
+                height="566" alt="Велосипед с широкими шинами на фоне горного пейзажа">
             </picture>
           </a>
         </li>
@@ -98,7 +102,7 @@
                 srcset="img/content/types/kids-bike-mobile.webp 1x, img/content/types/kids-bike-mobile@2x.webp 2x">
               <img src="img/content/types/kids-bike.jpg"
                 srcset="img/content/types/kids-bike.jpg 1x, img/content/types/kids-bike@2x.jpg 2x" width="342"
-                height="503" alt="Детский велосипед розового с белым цвета с розовой корзиной спереди">
+                height="512.5" alt="Детский велосипед розового с белым цвета с розовой корзиной спереди">
             </picture>
           </a>
         </li>
