--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 
 <body class="page-body">
   <header class="page-header">
-    <div class="page-header__content">
+    <div class="page-header__content page-header__content--nojs">
       <nav class="page-header__navigation main-navigation main-navigation--closed main-navigation--nojs">
         <button class="main-navigation__button" aria-label="Открыть меню"></button>
         <ul>
